<resources>
    <string name="app_name">My Application</string>
    <string name="label_release_date">Releas Data</string>
    <string name="label_overview">Overview</string>
    <string name="label_vote">Vote</string>
    <string name="details">Details</string>
    <string name="now_playing">Now Playing</string>
    <string name="Latest">Latest</string>
    <string name="Popular">Popular</string>
    <string name="card_numbering">1/4</string>
    <string name="heading">Heading</string>
    <string name="movie_name">Movie name</string>
    <string name="top_rated">Top Rated</string>
</resources>
