<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movies_recyclerview_1"
        android:scrollbars="horizontal"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/top_rated"
            android:layout_marginBottom="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movies_recyclerview_2"
            android:scrollbars="horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Popular"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>



        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:id="@+id/movies_recyclerview"
            android:scrollbars="vertical"
            />


    </LinearLayout>

    </ScrollView>
